--- a/public/assets/css/flex-slider.css
+++ b/public/assets/css/flex-slider.css
@@ -74,8 +74,8 @@ html[xmlns] .flexslider .slides {
  * ====================================================================================================================*/
 .flexslider {
   margin: 0;
-  background: #fff;
-  border: 4px solid #fff;
+  background: #000000;
+  border: 4px solid #000000;
   position: relative;
   zoom: 1;
   -webkit-border-radius: 4px;
